# shell-ai

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yaml
docs/images/: suggest-danish.cast  suggest-perl.cast  suggest-tar.cast
src/: config.rs  explain.rs  http.rs  integration.rs  logger.rs  main.rs  progress.rs  provider.rs  suggest.rs  ui.rs
xtask/: Cargo.toml
xtask/src/: bench.rs  main.rs  package.rs
