[workspace]
members = [".", "xtask"]

[workspace.metadata.release]
shared-version = true
sign-commit = true
sign-tag = true
tag-message = "Release version {{version}}"
pre-release-commit-message = "chore: Release version {{version}}"

[[workspace.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "^## v.* \\(UNRELEASED\\)"
replace = "## v{{version}} ({{date}})"

[[workspace.metadata.release.pre-release-replacements]]
file = "Cargo.toml"
search = "^version = \".*\""
replace = "version = \"{{version}}\""

[package]
name = "shell-ai"
version = "0.5.0"
edition = "2021"
description = "AI-assisted shell commands: create shell commands from natural language, or have them explained"
license = "MIT"
repository = "https://github.com/Deltik/shell-ai"
homepage = "https://github.com/Deltik/shell-ai"
readme = "README.md"
keywords = ["cli", "shell", "ai", "automation", "command-line"]
categories = ["command-line-utilities"]
exclude = [".github/", "docs/", "xtask/"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
dirs = "6"
ureq = { version = "3", features = ["json", "rustls"] }
colored = "3"
futures = "0.3"
shellexpand = "3"
is-terminal = "0.4"
arboard = { version = "3", features = ["wayland-data-control"] }
toml = "0.9"
strum = { version = "0.27", features = ["derive"] }
log = "0.4"
indicatif = "0.18"
crossterm = "0.29"
